# Pos_Tech_MLET

./: Aula_01_Exemplos_gradiente_descendente.ipynb  Aula_02_Exemplo_validação_cruzada_e_bootstrapping.ipynb  Aula_03_e_04_Curva_de_aprendizagem_e_lidando_com_overfitting.ipynb  LICENSE  MLE - Aula 3 BERT.ipynb  MLE - Aula 5 - NER.ipynb  POS_TECH_Exemplo_1_Q_Learning_FrozenLake_v1.ipynb  POS_TECH_Exemplo_2_REINFORCE_CartPole_v1.ipynb  README.md
feature_store/: Arquitetura de Feature Store.drawio  pyproject.toml  redme.md
feature_store/aula_31/: config.ps1
feature_store/aula_32/: customer_features.py  example_data.py  feature_store.py
feature_store/aula_33/: rematerialization.py
feature_store/aula_34/: consulta_e_uso.py
feature_store/aula_41/: main.py
feature_store/aula_42/: main.py
feature_store/aula_43/: main.py
feature_store/aula_44/: main.py
src/: generate_ft_data_azure.py  pyproject.toml
src/activation_functions/: backpropagation.py  readme.md  relu.py  requirements.txt  sigmoid.py  tanh.py
src/aula_01/: recomendacao_popularidade.py  schemas.py
src/aula_02/: exploracao_e_explotacao.py  schemas.py
src/aula_03/: similaridade_colaborativa.py
src/aula_04/: matrizes_esparsas.cpp  readme.md
src/aula_05/: reducao_dimensoes.py
src/aula_06/: agrupamento de vizinhos.py  schemas.py
src/aula_07/: funcoes_utilidade.py
src/aula_08/: engenharia_de_features.py  prompts.py  schemas.py
src/aula_09/: classificando_itens.py
src/aula_10/: identificando_propensao.py
src/data/: fine_tuning_data.jsonl
src/optimization/: adam.py  fine_tunning.py  lasso.py  monitoracao.py  prunning.py  quantization.py  readme.md  (+4 more)
(+157 files in other folders)
