[tool.poetry]
name = "feature-store"
version = "0.1.0"
description = ""
authors = ["Ricardo Cataldi <rcataldi@microsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
feast = "^0.40.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
